--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,140 @@
-.card{
-	width:100%;
-	height:470px;
-	margin-bottom:1.3rem;
-	padding:10px 0;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap');
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+.brightnessIcon .outIcon {
+    position: absolute;
+    top: 3%;
+    right: 9%;
+    font-size: 30px;
+    padding: 5px 10px;
+    cursor: pointer;
+    color: white;
 }
 
-.flag-img{
-	border:2px solid #ededed;
+.brightnessIcon .dropdown{
+    position: absolute;
+    top: 5%;
+    right: 8%;
 }
 
-.flag-img img{
-	width:100%;
+.brightnessIcon .dropdown .dropdown-menu {
+    min-width: 0;
+    border-radius: .5rem;
+    padding: 0;
 }
 
-.cName{
-	color:orange;
-	text-transform:uppercase;
-	font-size:24px;
-	text-align:center;
+.brightnessIcon .btn {
+    border: 0;
+    padding: 0;
 }
 
-.details{
-	text-transform:capitalize;
-	font-size:18px;
-	color:#747474;
+.brightnessIcon .dropdown .dropdown-menu button{
+    border-radius: 10px;
 }
 
-.details p{
-	margin-bottom:5px;
+.brightnessIcon .dropdown .btn.focus,
+.brightnessIcon .dropdown .btn:focus {
+    box-shadow: 0 0 0 .2rem transparent;
 }
 
-.countryCard .card{
-	transition: all 1s ease-in-out;
+.searchBar{
+    border-radius: 30px;
+    position: relative;
+    background-color: #ededed;
+    padding: 23px;
 }
 
-.countryCard .card:hover,
-.countryCard .card:focus,
-.countryCard .card:active{
-	transform:scale(1.05) translateY(-5px);
+.searchBar::placeholder{
+    color: grey; 
+    text-transform: capitalize;
+}
+
+.btnArrange{
+    padding: 8px 30px;
+    border-radius: 30px;
+    color: #776464;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+.btnArrange:hover,
+.btnArrange:active,
+.btnArrange:focus{
+    color: #776464 !important ;
+}
+
+#countryDetails .card-body p {
+    margin: 0;
+    color: #676262;
+}
+
+#countryDetails .card{
+    height: 300px;
+    box-shadow: 3px 3px 10px #6e6565;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+#countryDetails .card:hover,
+#countryDetails .card:active{
+    transform: scale(1.05);
+}
+
+.countryFlag {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.flag{
+    height: 70px;
+    width: 80%;
+    margin-left: 20px;
+    box-shadow: 1px 1px 10px rgb(75, 72, 72);
+}
+
+#graph{
+    width: 100%;
+    padding: 50px 20px 20px;
+    background-color: #ededed;
+}
+
+#graph .skillbox{
+    display: table;
+    clear: both;
+    width: 100%;
+}
+
+#graph .skillbox p,
+#graph .skillbox .skill{
+    float: left;
+}
+
+#graph .skillbox p:first-child{
+    width: calc(100% * 2 / 12);
+}
+
+#graph .skillbox p:last-child{
+    width: calc(100% * 1 / 12);
+}
+
+#graph .skillbox .skill{
+    width: calc(100% * 7 / 12);
+    border: 2px solid #0fffb7;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#graph .skillbox .skill .skill_level{
+    background-color: #0fffb7;
+    height: 20px;
+}
+
+.upArrowIcon{
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    width: 50px;
+    height: 50px;
 }
